# Tomurcuk

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CodeDivisions.cmake  CompilerSettings.cmake  ExternalTargets.cmake  FileUtilities.cmake  PlatformSettings.cmake
sources/tests/: main.cpp
sources/tomurcuk/: debugMessage.cpp
sources/tomurcuk/fundamentals/: README.md
sources/tomurcuk/fundamentals/basics/: README.md
sources/tomurcuk/fundamentals/basics/private/tomurcuk/: DebugMessage.cpp
sources/tomurcuk/fundamentals/basics/public/tomurcuk/: DebugMessage.hpp
sources/tomurcuk/fundamentals/tests/private/: main.cpp
